2005-09-15  Chong Yidong  <cyd@stupidchicken.com>

	* url-mailto.el (url-mailto): Delete mail buffer after sending
	autogenerated mail.

2005-09-13  Chong Yidong  <cyd@stupidchicken.com>

	* url-mailto.el (url-mailto): Always use a new mail buffer.

2005-09-01  Chong Yidong  <cyd@stupidchicken.com>

	* url-util.el (url-parse-query-string): New optional argument
	allow-newlines allows decoding of newlines.

	* url-mailto.el (url-mailto): Allow newlines in URL arguments.
	Don't lose original "to" value when there is a "to" header.
	Remove carriage return characters in message body.

2005-08-24  Juanma Barranquero  <lekktu@gmail.com>

	* url-news.el (nntp-open-tls-stream, nntp-open-ssl-stream):
	* url-http.el (url-http-cookies-sources): Defvar at compile time.

2005-07-15  Richard M. Stallman  <rms@gnu.org>

	* url-http.el (url-http-parse-headers): Add :redirect arg-pair
	when calling url-retrieve, to indicate a redirect.

	* url.el (url-retrieve): The callback function can get an additional
	keyword arg pair.

2005-07-04  Lute Kamstra  <lute@gnu.org>

	Update FSF's address in GPL notices.

2005-07-04  Juanma Barranquero  <lekktu@gmail.com>

	* url-history.el (url-history-track): Doc fix.
	(url-history): Finish `defgroup' description with period.

	* url-cookie.el (url-cookie):
	* url-gw.el (url-gateway):
	* url-news.el (url-news):
	* url-vars.el (url, url-file, url-cache, url-mime, url-hairy):
	Finish `defgroup' description with period.

2005-06-28  Klaus Straubinger  <KSNetz@Arcor.DE>  (tiny change)

	* url-http.el (url-http-create-request): Call url-recreate-url
	in proxy case.

2005-06-27  Klaus Straubinger  <KSNetz@Arcor.DE>  (tiny change)

	* url-http.el (url-http-create-request): When computing real-fname,
	call url-filename in both cases.

2005-06-27  Richard M. Stallman  <rms@gnu.org>

	* url-cookie.el (url-cookie-store): Rename arg PATH to LOCALPART.
	(url-cookie-retrieve): Likewise.
	(url-cookie-generate-header-lines): Likewise.