@@ -2,6 +2,7 @@
 
 	* url-mailto.el (url-mailto): Delete mail buffer after sending
 	autogenerated mail.
+	Call `compose-mail with `new' argument if possible.
 
 2005-09-13  Chong Yidong  <cyd@stupidchicken.com>
 
